modifiqué captions de slides de carousel

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -162,7 +162,7 @@
                                 <img src="../assets/img/desktop/domo2.jpg" alt="bailarín trepado a una estructura">
                             </div>
                             <figcaption>
-                                Adam Feiguin en Casa Tierra
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -173,7 +173,7 @@
                                 <img src="../assets/img/desktop/domo3.jpg" alt="bailarín haciendo un salto estilo Superman">
                             </div>
                             <figcaption>
-                                Adam Feiguin en Casa Tierra
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -184,7 +184,7 @@
                                 <img src="../assets/img/desktop/campo1.jpg" alt="bailarín danzando en el campo">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -195,7 +195,7 @@
                                 <img src="../assets/img/desktop/campo2.jpg" alt="bailarín haciendo un paso de danza moderna">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -206,7 +206,7 @@
                                 <img src="../assets/img/desktop/campo3.jpg" alt="bailarín haciendo un salto bolita en el aire">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -217,7 +217,7 @@
                                 <img src="../assets/img/desktop/naked1.jpg" alt="bailarín haciendo un desnudo artístico con un paso de danza contemporánea">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -228,7 +228,7 @@
                                 <img src="../assets/img/desktop/naked2.jpg" alt="bailarín haciendo un desnudo artístico con un árbol">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -239,7 +239,7 @@
                                 <img src="../assets/img/desktop/naked3.jpg" alt="bailarín haciendo un desnudo artístico con huesos de estudio de anatomía">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Intérprete: Adam Feiguin 
                                 <span class="credit">Photo: Ale Carmona</span>                            
                             </figcaption>
                         </figure>
@@ -250,7 +250,7 @@
                             <img src="../assets/img/desktop/park1.jpg" alt="bailarín haciendo un salto de danza clásica">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Intérprete: Adam Feiguin 
                             <span class="credit">Photo: Free Soul</span>                            
                         </figcaption>
                     </figure>
@@ -261,7 +261,7 @@
                             <img src="../assets/img/desktop/park2.jpg" alt="dúo de bailarines realizando partener">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Intérpretes: Adam Feiguin & Kanako Hongo
                             <span class="credit">Photo: Free Soul</span>                            
                         </figcaption>
                     </figure>
@@ -272,7 +272,7 @@
                             <img src="../assets/img/desktop/park3.jpg" alt="bailarín llevando en el hombro a bailarina" >
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Intérpretes: Adam Feiguin & Kanako Hongo 
                             <span class="credit">Photo: Free Soul</span>                            
                         </figcaption>
                     </figure>
@@ -283,7 +283,7 @@
                             <img src="../assets/img/desktop/city1.jpg" alt="bailarín haciendo un salto en la fachada del Teatro Colón">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Intérprete: Adam Feiguin 
                             <span class="credit">Photo: Free Soul</span>                            
                         </figcaption>
                     </figure>
@@ -294,7 +294,7 @@
                             <img src="../assets/img/desktop/city2.jpg" alt="bailarín haciendo una parada en una mano con piernas en alto estilo break dance" >
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Intérprete: Adam Feiguin 
                             <span class="credit">Photo: Free Soul</span>                            
                         </figcaption>
                     </figure>
@@ -305,7 +305,7 @@
                             <img src="../assets/img/desktop/city3.jpg" alt="bailarín saltando y pasando una pierna por dentro de la otra">
                         </div>
                         <figcaption>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Intérprete: Adam Feiguin 
                             <span class="credit">Photo: Free Soul</span>                            
                         </figcaption>
                     </figure>
@@ -316,7 +316,7 @@
                         <img src="../assets/img/desktop/agua1.jpg" alt="bailarín mirando a cámara con un chorro de agua detrás en movimiento">
                     </div>
                     <figcaption>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Intérprete: Adam Feiguin 
                         <span class="credit">Photo: Macadenoia</span>                            
                     </figcaption>
                 </figure>
@@ -327,7 +327,7 @@
                         <img src="../assets/img/desktop/agua2.jpg" alt="bailarín con cara cubierta y envuelta por agua en movimiento con un recorrido circular">
                     </div>
                     <figcaption>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Intérprete: Adam Feiguin 
                         <span class="credit">Photo: Macadenoia</span>                            
                     </figcaption>
                 </figure>
@@ -338,7 +338,7 @@
                         <img src="../assets/img/desktop/agua3.jpg" alt="bailarín mojado con agua en movimiento que le llega desde el lado izquierdo de su cuerpo">
                     </div>
                     <figcaption>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Intérprete: Adam Feiguin 
                         <span class="credit">Photo: Macadenoia</span>                            
                     </figcaption>
                 </figure>
@@ -349,7 +349,7 @@
                         <img src="../assets/img/desktop/winter1.jpg" alt="bailarín improvisando movmientos con sus manos con una campera y su cara oculta">
                     </div>
                     <figcaption>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Intérprete: Adam Feiguin 
                         <span class="credit">Photo: Macadenoia</span>                            
                     </figcaption>
                 </figure>
@@ -360,7 +360,7 @@
                         <img src="../assets/img/desktop/winter2.jpg" alt="rostro de bailarín mirando a cámara con una campera puesta">
                     </div>
                     <figcaption>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Intérprete: Adam Feiguin 
                         <span class="credit">Photo: Macadenoia</span>                            
                     </figcaption>
                 </figure>
@@ -371,7 +371,7 @@
                         <img src="../assets/img/desktop/winter3.jpg" alt="bailarín haciendo variación de un arco sobre el suelo">
                     </div>
                     <figcaption>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Intérprete: Adam Feiguin 
                         <span class="credit">Photo: Macadenoia</span>                            
                     </figcaption>
                 </figure>
@@ -382,7 +382,7 @@
                     <img src="../assets/img/desktop/fruta1.jpg" alt="bailarín sentado improvisando una danza con frutas varias y un sombrero">
                 </div>
                 <figcaption>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Intérprete: Adam Feiguin 
                     <span class="credit">Photo: Lima</span>                            
                 </figcaption>
             </figure>
@@ -393,7 +393,7 @@
                     <img src="../assets/img/desktop/fruta2.jpg" alt="bailarín improvisando con frutas, verduras, un sombrero y un libro">
                 </div>
                 <figcaption>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Intérprete: Adam Feiguin 
                     <span class="credit">Photo: Lima</span>                            
                 </figcaption>
             </figure>
@@ -404,7 +404,7 @@
                     <img src="../assets/img/desktop/fruta3.JPG" alt="bailarín improvisando con un broche, un sombrero, libros, frutas y verduras">
                 </div>
                 <figcaption>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Intérprete: Adam Feiguin 
                     <span class="credit">Photo: Lima</span>                            
                 </figcaption>
             </figure>
