push por las dudas

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"/>
   </head>
 
-  <body>
+  <body> <!--no sé qué pasó con mi identado que se hizo enorme en esta html.. lo voy a modificar cuando tenga un tiempo-->
     <header>
         <div class="position-nav">
             <nav class="navbar navbar-expand-sm mt-0">
@@ -89,9 +89,9 @@
                 <div> <img src="../assets/img/desktop/fruta2.jpg" alt="bailarín improvisando con frutas, verduras, un sombrero y un libro" class="foto-vert foto-23"/></div>
                 <div> <img src="../assets/img/desktop/fruta3.JPG" alt="bailarín improvisando con un broche, un sombrero, libros, frutas y verduras" class="foto-vert foto-24"/></div>
             </section>
-        |   <section id="videos"> 
-        |   <!--seccion videos-->
-        |   <section class="container-videos"> 
+            <section id="videos"> 
+            <!--seccion videos-->
+            <section class="container-videos"> 
                 <div class="video-1">
                     <iframe
                         src="https://www.youtube.com/embed/dBg6KAlECyk"
@@ -261,7 +261,7 @@
                             <img src="../assets/img/desktop/park2.jpg" alt="dúo de bailarines realizando partener">
                         </div>
                         <figcaption>
-                            Intérpretes: Adam Feiguin & Kanako Hongo
+                            
                             <span class="credit">Photo: Free Soul</span>                            
                         </figcaption>
                     </figure>
