Agregué un label picture para agrandar imagen en bio mobile + Achiqué aún más las img y videos de galería en mobile

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -61,7 +61,10 @@
 
     <main>
       <article class="container-bio">
-        <img src="../assets/img/desktop/foto-bio.jpg " alt="Adam Feiguin mirando a cámara" class="foto-bio">
+        <picture>
+          <source media="(max-width:576px)" srcset="../assets/img/desktop/foto-bio.jpg " alt="Adam Feiguin mirando a cámara" class="foto-bio">
+          <img src="../assets/img/desktop/foto-bio.jpg " alt="Adam Feiguin mirando a cámara" class="foto-bio">
+        </picture>
         <h2 class="interlineado">INVESTIGADOR DEL MOVIMIENTO <br>
           PRACTITIONER CERTIFICADO EN MÉTODO FELDENKRAIS. BAILARÍN, PERFORMER, MÚSICO, PRODUCTOR Y DOCENTE
         </h2>
